es-ds-styles/scss/_pagination.scss
@use "mixins/border-radius";
@use "mixins/lists";
@use "mixins/pagination";
@use "variables";

.pagination {
  display: flex;
  @include lists.list-unstyled();
  @include border-radius.border-radius();
}

.paginator-button {
  display: flex;
  align-items: center;
  justify-content: center;
  @include border-radius.border-radius(variables.$pagination-border-radius);
  width: 3rem;
  height: 3rem;
  padding: variables.$pagination-padding-y variables.$pagination-padding-x;
  margin-left: -(variables.$pagination-border-width);
  line-height: variables.$pagination-line-height;
  color: variables.$pagination-color;
  text-decoration: if(variables.$link-decoration == none, null, none);
  background-color: variables.$pagination-bg;
  border: 0;

  &:not(.disabled):hover {
    background-color: variables.$gray-50;
  }

  &:focus {
    z-index: 3;
    outline: variables.$pagination-focus-outline;
    box-shadow: variables.$pagination-focus-box-shadow;
  }

  &:disabled {
    color: variables.$pagination-disabled-color;
    pointer-events: none;
    // Opinionated: remove the "hand" cursor set previously for .page-link
    cursor: auto;
    // TODO: this seems removable... note in PR and scan for other removable styles?
    background-color: variables.$pagination-disabled-bg;
    border-color: variables.$pagination-disabled-border-color;
  }
}

.current-page-report {
  display: flex;
  flex-direction: column;
  justify-content: center;
  font-size: variables.$font-size-300;
  font-weight: variables.$font-weight-semibold;
  color: variables.$pagination-color;
  text-align: center;
}

